--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,21 +1,13 @@
-#- yum_repository:
-#    name: docker
-#    description: Docker Repository
-#    baseurl: https://yum.dockerproject.org/repo/main/centos/7/
-#    enabled: yes
-#    gpgcheck: yes
-#    gpgkey: https://yum.dockerproject.org/gpg
-#- yum:
-#    name: docker-engine
-#    state: present
-- yum:
-    name: docker
-    state: present
+- name: install docker from docker repo
+  include: tasks/install_docker.yml
+  when: install_latest
 
-- service:
-    name: docker
-    enabled: yes
-    state: started
+- name: install docker from centos repo
+  include: tasks/install_centos_docker.yml
+  when: not install_latest
+
+
+
 - get_url:
     url: https://github.com/docker/compose/releases/download/1.8.0/docker-compose-Linux-x86_64
     checksum: sha256:ebc6ab9ed9c971af7efec074cff7752593559496d0d5f7afb6bfd0e0310961ff
